--- a/natale_rapp.tex
+++ b/natale_rapp.tex
@@ -5,11 +5,13 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{ntheorem}
 \usepackage[colorinlistoftodos]{todonotes}
 
+\theoremstyle{break}
+\newtheorem{ex}{{ \Large Esercizio} }
 \theoremstyle{plain}
-\newtheorem{ex}{Esercizio}
-\newtheorem{sol}[ex]{Soluzione}
+\newtheorem{sol}{Soluzione}[ex]
 
 \title{Rappresentazioni \\ { \textit soluzioni agli esercizi per natale }}
 
@@ -20,10 +22,10 @@
 \begin{document}
 \maketitle
 
-\begin{ex}
+\begin{ex} 
 
 
-\begin{sol}
+\begin{sol} 
 
 \end{sol}
 
