--- a/natale_rapp.tex
+++ b/natale_rapp.tex
@@ -22,6 +22,8 @@
 \begin{document}
 \maketitle
 
+\section*{Soluzioni agli esercizi}
+
 \begin{ex} 
 
 
@@ -148,5 +150,8 @@
 
 \end{ex}
 
+\newpage
+\section*{Idee utili per gli esercizi}
+\subsection*{Tabelle dei caratteri}
 
 \end{document}
