--- a/natale_rapp.tex
+++ b/natale_rapp.tex
@@ -25,7 +25,8 @@
 \section*{Soluzioni agli esercizi}
 
 \begin{ex} 
-
+Siano $k$, e $n$ due interi positivi. Per ogni $\sigma \in S_k$ denotate con $\omega(\sigma)$ il numero di orbite di $\sigma$ su $\{1, \ldots, k\}$. Dimostrate la formula:
+$$ \frac{1}{k!} \sum_{\sigma \in S_k} n^{\omega(\sigma)} = \binom{n+k-1}{k} $$
 
 \begin{sol} 
 
@@ -39,21 +40,7 @@
 \end{ex}
 
 \begin{ex}
-
-
-\begin{sol}
-
-\end{sol}
-
-\begin{sol}
-
-\end{sol}
-
-
-\end{ex}
-
-\begin{ex}
-
+Calcolate la scomposizione in fattori irriducibili dei prodotti di tutte le possibili coppie di rappresentazioni irriducibili di $S_4$.
 
 \begin{sol}
 
@@ -68,6 +55,29 @@
 
 \begin{ex}
 
+\begin{itemize}
+\item[(a)]  Sia $\rho: G \to \mathrm{GL}(V) $ una rappresentazione irriducibile di un gruppo $G$. Dimostrate che l’immagine del centro di G è contenuta nel sottogruppo dei multipli dell’identità.
+
+\item[(b)] Dimostrate che ogni sottogruppo finito di $\mathbb{C}^*$ è ciclico
+
+\item[(c)] Se un gruppo finito ha una rappresentazione fedele irriducibile, allora il suo
+
+centro è ciclico. Nota: una rappresentazione $\rho$ di $G$ è fedele se $\rho: G \to \mathrm{GL}(V_{\rho}) $ è iniettivo.
+
+\end{itemize}
+\begin{sol}
+
+\end{sol}
+
+\begin{sol}
+
+\end{sol}
+
+
+\end{ex}
+
+\begin{ex}
+Se $\rho$ è una rappresentazione irriducibile di $S_5$ di grado 5 e $s \in S_5$ è un 5-ciclo, fate vedere che $\rho(s)$ ha come autovalori tutte e sole le radici quinte dell’unità.
 
 \begin{sol}
 
@@ -81,21 +91,7 @@
 \end{ex}
 
 \begin{ex}
-
-
-\begin{sol}
-
-\end{sol}
-
-\begin{sol}
-
-\end{sol}
-
-
-\end{ex}
-
-\begin{ex}
-
+Trovare la tavola dei caratteri di $A_4$.
 
 \begin{sol}
 
@@ -109,7 +105,28 @@
 \end{ex}
 
 \begin{ex}
+Trovare la tavola dei caratteri di $D_4, D_5$.
 
+\begin{sol}
+
+\end{sol}
+
+\begin{sol}
+
+\end{sol}
+
+
+\end{ex}
+
+\begin{ex}
+Sia $T$ un tetraedro di centro nell'origine, e sia $G \subseteq O_3$ il gruppo delle trasformazioni ortogonali che portano $T$ in se stesso. Numerando in qualche modo i vertici di $T$ da $1$ a $4$, otteniamo un’azione di $G$ su $\{1, 2, 3, 4\}$.
+\begin{itemize}
+\item[(a)] Fate vedere che questo dà un’identificazione di $G$ con $S_4$.
+
+\item[(b)] Fate vedere che il sottogruppo di $G$ delle matrici con determinante positivo corrisponde ad $A_4$.
+
+\item[(c)] Scomponete la rappresentazione per permutazioni corrispondente agli spigoli del tetraedro come rappresentazione di $A_4$.
+\end{itemize}
 
 \begin{sol}
 
